
syntax = "proto3";
package v1;
option go_package = "github.com/cossim/coss-server/service/relation/api/v1";

message CreateDialogRequest {
  //  @inject_tag: json:"owner_id"
  string OwnerId = 1;
  //  @inject_tag: json:"type"
  uint32 Type = 2;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 3;
}

message CreateDialogResponse {
  //  @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;
  //  @inject_tag: json:"type"
  uint32 Type = 3;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;
}


message JoinDialogRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message JoinDialogResponse {}


message GetUserDialogListRequest {
  //  @inject_tag: json:"user_id"
  string UserId = 1;
}
message GetUserDialogListResponse {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}

message GetDialogByIdsRequest {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}
message GetDialogByIdsResponse {
  //  @inject_tag: json:"dialogs"
  repeated Dialog Dialogs = 1;
}

message Dialog {
  //  @inject_tag: json:"id"
  uint32 Id = 1;
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;
  //  @inject_tag: json:"type"
  uint32 Type = 3;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;
}


message GetDialogUsersByDialogIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message GetDialogUsersByDialogIDResponse {
  //  @inject_tag: json:"user_ids"
  repeated string UserIds = 1;
}


message DeleteDialogByIdsRequest {
  //  @inject_tag: json:"dialog_ids"
  repeated uint32 DialogIds = 1;
}
message DeleteDialogByIdsResponse {}


message DeleteDialogByIdRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message DeleteDialogByIdResponse {}


message DeleteDialogUsersByDialogIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
}
message DeleteDialogUsersByDialogIDResponse {}

message GetDialogUserByDialogIDAndUserIdRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message GetDialogUserByDialogIDAndUserIdResponse {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
  //  @inject_tag: json:"is_show"
  uint32 IsShow = 3;
  //  @inject_tag: json:"top_at"
  uint64 TopAt = 4;
}

message DeleteDialogUserByDialogIDAndUserIDRequest {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"user_id"
  string UserId = 2;
}
message DeleteDialogUserByDialogIDAndUserIDResponse {}


message GetDialogByGroupIdRequest {
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 1;
}

message GetDialogByGroupIdResponse {
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 1;
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 2;
}

message GetDialogByGroupIdsRequest {
  //  @inject_tag: json:"group_id"
  repeated uint32 GroupId = 1;
}

message GetDialogByGroupIdsResponse {
  //  @inject_tag: json:"dialogs"
  repeated GetDialogByGroupIdResponse Dialogs = 1;
}

message ConfirmFriendAndJoinDialogRequest {
  //  @inject_tag: json:"owner_id"
  string OwnerId = 1;  // 创建者id
  //  @inject_tag: json:"user_id"
  string UserId = 2;   // 对方用户id
  //  @inject_tag: json:"type"
  DialogType Type = 3; // 会话类型 (0:用户会话, 1:群组会话)
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;  // 群组id
}

message ConfirmFriendAndJoinDialogResponse {
  //  @inject_tag: json:"id"
  uint32 Id = 1;        // 会话id
  //  @inject_tag: json:"owner_id"
  string OwnerId = 2;   // 创建者id
  //  @inject_tag: json:"type"
  DialogType Type = 3;  // 会话类型 (0:用户会话, 1:群组会话)
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;   // 群组id
}

enum DialogType {
  USER_DIALOG = 0;  // 用户会话
  GROUP_DIALOG = 1; // 群组会话
}

message ConfirmFriendAndJoinDialogRevertRequest {
  //  @inject_tag: json:"owner_id"
  string OwnerId = 1;  // 创建者id
  //  @inject_tag: json:"user_id"
  string UserId = 2;   // 对方用户id
  //  @inject_tag: json:"type"
  DialogType Type = 3; // 会话类型 (0:用户会话, 1:群组会话)
  //  @inject_tag: json:"group_id"
  uint32 GroupId = 4;  // 群组id
  //  @inject_tag: json:"dialog_id"
  uint32 DialogId = 5;        // 会话id
}

message ConfirmFriendAndJoinDialogRevertResponse {}

service DialogService {
  // CreateDialog 创建对话
  rpc CreateDialog(CreateDialogRequest) returns (CreateDialogResponse) {}

  // ConfirmFriendAndJoinDialog 确认好友并加入对话
  rpc ConfirmFriendAndJoinDialog(ConfirmFriendAndJoinDialogRequest) returns (ConfirmFriendAndJoinDialogResponse) {}

  // ConfirmFriendAndJoinDialogRevert ConfirmFriendAndJoinDialog回滚操作
  rpc ConfirmFriendAndJoinDialogRevert(ConfirmFriendAndJoinDialogRevertRequest) returns (ConfirmFriendAndJoinDialogRevertResponse) {}

  // JoinDialog 加入对话
  rpc JoinDialog(JoinDialogRequest) returns (JoinDialogResponse) {}

  // GetUserDialogList 获取用户对话列表
  rpc GetUserDialogList(GetUserDialogListRequest) returns (GetUserDialogListResponse) {}

  // GetDialogByIds 根据对话ID获取对话信息
  rpc GetDialogByIds(GetDialogByIdsRequest) returns (GetDialogByIdsResponse) {}

  // GetDialogUsersByDialogID 根据对话ID获取对话成员列表
  rpc GetDialogUsersByDialogID(GetDialogUsersByDialogIDRequest) returns (GetDialogUsersByDialogIDResponse) {}

  // GetDialogUserByDialogIDAndUserID 根据对话ID和用户ID获取对话成员信息
  rpc GetDialogUserByDialogIDAndUserID(GetDialogUserByDialogIDAndUserIdRequest) returns (GetDialogUserByDialogIDAndUserIdResponse) {}

  // GetDialogByGroupId 根据群组ID获取对话信息
  rpc GetDialogByGroupId(GetDialogByGroupIdRequest) returns (GetDialogByGroupIdResponse) {}
  rpc GetDialogByGroupIds(GetDialogByGroupIdsRequest) returns (GetDialogByGroupIdsResponse) {}

  // DeleteDialogByIds 根据对话ID列表删除对话
  rpc DeleteDialogByIds(DeleteDialogByIdsRequest) returns (DeleteDialogByIdsResponse) {}

  // DeleteDialogById 根据对话ID删除对话
  rpc DeleteDialogById(DeleteDialogByIdRequest) returns (DeleteDialogByIdResponse) {}

  // DeleteDialogUsersByDialogID 根据对话ID删除对话成员
  rpc DeleteDialogUsersByDialogID(DeleteDialogUsersByDialogIDRequest) returns (DeleteDialogUsersByDialogIDResponse) {}

  // DeleteDialogUserByDialogIDAndUserID 根据对话ID和用户ID删除对话成员
  rpc DeleteDialogUserByDialogIDAndUserID(DeleteDialogUserByDialogIDAndUserIDRequest) returns (DeleteDialogUserByDialogIDAndUserIDResponse) {}
}